Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108045

[FTBFS] iter.physx::PxContactStreamIterator::faceIndice’ may be used uninitialized

XMLWordPrintable

    • d1a0fe6954 (qt/qtquick3dphysics/dev) 066a7d2806 (qt/qtquick3dphysics/6.4) 066a7d2806 (qt/qtquick3dphysics/6.4.1)

      Your third-party component is bad. Please fix it. Preferably, DELETE IT and use only system includes, which have the benefit of automatic warning suppression.

      In member function ‘void physx::PxContactStreamIterator::nextContact()’,
          inlined from ‘physx::PxU32 physx::PxContactPair::extractContacts(physx::PxContactPairPoint*, physx::PxU32) const’ at qtquick3dphysics/src/3rdparty/PhysX/include/PxSimulationEventCallback.h:646:21,
          inlined from ‘virtual void CallBackObject::onContact(const physx::PxContactPairHeader&, const physx::PxContactPair*, physx::PxU32)’ at qtquick3dphysics/src/quick3dphysics/qdynamicsworld.cpp:254:67:
      qtquick3dphysics/src/3rdparty/PhysX/include/PxContact.h:359:35: error: ‘iter.physx::PxContactStreamIterator::faceIndice’ may be used uninitialized [-Werror=maybe-uninitialized]
        359 |                         faceIndice++;
            |                         ~~~~~~~~~~^~
      PxContact.h:358:35: error: ‘iter.physx::PxContactStreamIterator::contact’ may be used uninitialized [-Werror=maybe-uninitialized]
      PxContact.h:330:54: error: ‘iter.physx::PxContactStreamIterator::patch’ may be used uninitialized [-Werror=maybe-uninitialized]
      

      Using GCC 12.

        For Gerrit Dashboard: QTBUG-108045
        # Subject Branch Project Status CR V

            jokarlss Jonas Karlsson
            thiago Thiago Macieira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes