Workaround maybe-uninitialized error in GCC 12.2.1

This error appeared on OpenSUSE Tumbleweed. Even though the PhysX
headers are supposed to be treated like system headers this error
appears. I guess because the methods are inlined.

Fixes: QTBUG-108045
Change-Id: I1d70f3214dc3261887532d529d1c8878d962293d
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit d1a0fe6954067039d4c590dd8a31a63fe19581fd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>